2011-03-30  SevenMachines  <SevenMachines@yahoo.co.uk>

	* src/config/ConfigEntry.cpp (ConfigEntry::getIntegerFormattedOptions): convenience function to change all the options to ints
	* src/common/Containers.h (Containers): Search for an object in a single dimensional collection and return iterator

2011-03-29  SevenMachines  <SevenMachines@yahoo.co.uk>

	* src/config/ConfigTranslator.h: Class to read in/write out  config files and translate them into collections of ConfigEntry
	* src/config/ConfigEntry.cpp (ConfigEntry::parseEntry): Create all variables from the raw string entry